# Pareto_Frontier

./: .flake8  .gitignore  .pareto_baseline.json  AGENT.md  Dockerfile  README.md  VISION.md  bench_results.txt  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  test_1.out  test_2.out  test_3.out  test_4.out  test_output.txt  tree_verbose.txt  verification_test.py
.cache/text_cache/: text_store.jsonl
.github/workflows/: ci.yml
Pareto_Frontier/: AGENT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  run_env.sh
Pareto_Frontier/docs/: DEPLOYMENT.md
configs/: default_config.yaml
core/: metrics_engine.py  models.py  orchestrator.py  orchestrator.py"\]  orchestrator.py`
core/legos/: first_principles.md
core/runtime/: observer.py  parse-input.sh  parse_cache.sh  parser.py  semantic_cache.py  skeletonizer.py  stabilizer.py  text_cache.py
docs/: AGENT_GUIDE.md  DEPLOYMENT.md  ROADMAP.md  USER_GUIDE.md
docs/architecture/: logical_audit.md
evals/: benchmark.py  compare_efficiency.py  metrics_engine.py  performance_audit.jsonl  run_benchmarks.sh
evals/ci_reports/: baseline_pareto_score.json  cache.json  current_report.json  std.json
models/: config.yaml
pareto_frontier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: fix_and_clean.sh  pareto-doctor  pareto-run  pareto-watch  pareto_cli.py  setup-env.sh
src/pareto_frontier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
tests/: simple_test.py  test_metrics.py  test_orchestrator.py  test_output_sanitizer.py  test_time.py  verification_test.py
(+19 files in other folders)
