[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pareto-frontier"
version = "0.1.0"
description = "High-Efficiency LLM Stack for the Edge."
authors = [{ name = "ZonG0D", email = "user@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "psutil>=5.0",
]

[project.urls]
Homepage = "https://github.com/ZonG0D/Pareto_Frontier"
Issues = "https://github.com/ZonG0D/Pareto_Frontier/issues"

[project.scripts]
pareto-run = "pareto_frontier.cli:main"
pareto-doctor = "pareto_frontier.cli:diagnose"

[tool.setuptools.packages.find]
where = ["src", "."]


[tool.black]
target-version = ["py314"]
